WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293761
REGRESSION (
294690@main
): [ macOS wk2 ] http/wpt/service-workers/navigate-iframes-window-client.https.html is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=293761
Summary
REGRESSION (294690@main ): [ macOS wk2 ] http/wpt/service-workers/navigate-if...
Karl Rackler
Reported
2025-05-29 14:17:24 PDT
Description: http/wpt/service-workers/navigate-iframes-window-client.https.html This issue can be bisected to
294690@main
using the command: run-webkit-tests --release --no-retry --force --iterations=1 http/wpt/service-workers/navigate-iframes-window-client.https.html History:
https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fservice-workers%2Fnavigate-iframes-window-client.https.html&platform=mac
Diff: @@ -1,8 +1,8 @@ PASS Setup activating worker -PASS Navigate to same origin -PASS Navigate to same URL +FAIL Navigate to same origin promise_test: Unhandled rejection with value: object "TypeError: undefined is not an object (evaluating 'result.url.includes')" +FAIL Navigate to same URL assert_equals: expected (string) "
https://localhost:9443/WebKit/service-workers/resources/
" but got (undefined) undefined PASS Navigate to same document fragment PASS Navigate to cross origin
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-29 14:17:35 PDT
<
rdar://problem/152266507
>
EWS
Comment 2
2025-05-29 14:28:37 PDT
Test gardening commit
295569@main
(ac6e95e5c4a7): <
https://commits.webkit.org/295569@main
> Reviewed commits have been landed. Closing PR #46074 and removing active labels.
Karl Rackler
Comment 3
2025-05-29 14:41:26 PDT
This issue can be bisected to
294690@main
for test http/tests/navigation/keyboard-events-during-provisional-navigation.html also. Diff: @@ -12,8 +12,6 @@ CONSOLE MESSAGE: textInputevent dispatched (isTrusted: true). CONSOLE MESSAGE: Input element value after text input events: "". CONSOLE MESSAGE: Pressing "z" with access key modifiers should navigate to resources/keyboard-events-after-navigation.html. -CONSOLE MESSAGE: keydownevent dispatched (isTrusted: true). -CONSOLE MESSAGE: keyupevent dispatched (isTrusted: true). CONSOLE MESSAGE: Finished navigating to resources/keyboard-events-after-navigation.html. CONSOLE MESSAGE: Trusted events should be logged and the input element should have the value "acd". CONSOLE MESSAGE: Dispatching untrusted keypress event.
EWS
Comment 4
2025-05-29 14:47:29 PDT
Test gardening commit
295572@main
(581cd73f62a2): <
https://commits.webkit.org/295572@main
> Reviewed commits have been landed. Closing PR #46076 and removing active labels.
youenn fablet
Comment 5
2025-07-03 03:04:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47544
EWS
Comment 6
2025-07-03 10:06:01 PDT
Committed
296976@main
(5ae6f9f5204b): <
https://commits.webkit.org/296976@main
> Reviewed commits have been landed. Closing PR #47544 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug